fix header/footer alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,10 @@ body {
 
 nav {
     margin-top: 10px;
+    text-align: right;
 }
 nav > a {
-    padding: 15px 20px;
+    padding: 17px 20px;
 }
 nav > a.selected {
     font-weight: bold;
